--- a/public/tessellates/stats/index.html
+++ b/public/tessellates/stats/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="../main.css">
-    <script src="../api-state.js"></script>
-    <script src="../params.js"></script>
-    <script src="../api-helpers.js"></script>
+    <link rel="stylesheet" href="/main.css">
+    <script src="/api-state.js"></script>
+    <script src="/params.js"></script>
+    <script src="/api-helpers.js"></script>
     <script src="stats.js"></script>
   </head>
   <body>
